# kuberest

./: .dockerignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Gemfile  README.md  _config.yml  about.md  artifacthub-repo.yml  documentation.md  dummy.rs  index.md  index.yaml  install.md  release.toml
.github/: dependabot.yml
.github/workflows/: chart.yml  ci.yml  rustfmt.yml
charts/kuberest/: Chart.yaml  test.yaml  values.yaml
charts/kuberest/templates/: deployment.yaml  networkpolicy.yaml  rbac.yaml
deploy/: kustomization.yaml  ns.yaml
deploy/crd/: crd.yaml
deploy/operator/: deployment.yaml  kustomization.yaml
docs/: flow.drawio  teardown_flow.drawio
examples/: instance-gen-config-from-get.yaml  instance-gitea-woodpecker.yaml  instance-set-all-projects-merge-method.yaml  instance-uuidgen.yaml
examples/abuses/: README.md  k8s-system-pod.yaml  password-generator.yaml  secret-copy.yaml
examples/authentik/: openid-gitea.yaml
examples/gitea/: openid-woodpecker.yaml  organisations-team.yaml
examples/gitlab/: set-all-projects-config.yaml
examples/harbor/: mirror-docker.yaml
src/: crdgen.rs  fixtures.rs  handlebarshandler.rs  hasheshandlers.rs  httphandler.rs  k8shandlers.rs  lib.rs  main.rs  metrics.rs  passwordhandler.rs  restendpoint.rs  rhaihandler.rs  state.rs  telemetry.rs  types.rs
yaml/: crd.yaml  deployment.yaml  instance-create-gitlab-hook.yaml  instance-dataout.yaml  instance-list-config.yaml  instance-samuel.yaml  instance-secret-copy.yaml  instance-test.yaml  instance-uuidgen.yaml
