[package]
name = "kuberest"
version = "1.2.0"
authors = ["Sébastien Huss <sebastien.huss@gmail.com>"]
edition = "2021"
default-run = "controller"
license = "Apache-2.0"
publish = false

# use "cargo install cargo-commander", then "cargo cmd generate"
[package.metadata.commands]
generate = { cmd=[
    "sed -i \"s/^appVersion:.*/appVersion: $(awk '/^version =/{print $3;exit}' Cargo.toml)/;s/^version:.*/version: $(awk '/^version =/{print $3;exit}' Cargo.toml)/\" charts/kuberest/Chart.yaml",
    "cargo run --bin crdgen > deploy/crd/crd.yaml",
    "helm template charts/kuberest > deploy/operator/deployment.yaml"
]}
crd = { cmd=[
    "cargo run --bin crdgen > deploy/crd/crd.yaml",
    "kubectl apply -f deploy/crd/crd.yaml"
]}
fmt = { cmd=[
    "cargo +nightly fmt"
]}
operator = { cmd=[
    "podman build . -t docker.io/sebt3/kuberest:$(awk '/^version =/{print $3;exit}' Cargo.toml|sed 's/\"//g') && podman push docker.io/sebt3/kuberest:$(awk '/^version =/{print $3;exit}' Cargo.toml|sed 's/\"//g')",
]}
precommit = { cmd=[
    "cargo update",
    "cargo clippy --fix --allow-dirty",
    "cargo cmd generate",
    "cargo +nightly fmt"
]}

[[bin]]
doc = false
name = "dummy"
path = "dummy.rs"

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[lib]
name = "controller"
path = "src/lib.rs"

[features]
default = []
telemetry = ["opentelemetry-otlp"]

[dependencies]
actix-web = "4.9.0"
futures = "0.3.28"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
schemars = { version = "0.8.12", features = ["chrono"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
prometheus = "0.13.4"
chrono = { version = "0.4.38", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.27.0"
opentelemetry = { version = "0.26.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.26.0", optional = true }
thiserror = "2.0.3"
anyhow = "1.0.75"
handlebars =  { version = "6.2.0", features = ["script_helper", "string_helpers"] }
handlebars_misc_helpers = { version = "0.17.0", features = ["string", "json", "jsonnet", "regex", "uuid"] }
rhai = { version = "1.20.0", features = ["sync", "serde"] }
reqwest = { version = "0.12.4", features = ["rustls-tls"] }
base64 = "0.22.1"
rand = "0.8.5"
argon2 = { version = "0.5.3", features = ["std"] }
bcrypt = "0.16.0"

[dev-dependencies]
assert-json-diff = "2.0.2"
http = "1"
hyper = "1"
tower-test = "0.4.0"

[dependencies.kube]
features = ["runtime", "client", "derive" ]
version = "0.96.0"
